--- a/assets/stylesheets/how_works.css
+++ b/assets/stylesheets/how_works.css
@@ -4,11 +4,9 @@
   font-size: 2em;
   font-weight: bold;
   text-transform: uppercase;
-  margin-top: 1em;
-  padding-top: 2em; }
+  margin-top: 1em; }
 #how_works p, #faq p {
-  font-size: 1.5em;
-  margin: 2em 0; }
+  font-size: 1.5em; }
 
 #how_works_action {
   background-image: url("../images/windows.jpg");
