--- a/assets/stylesheets/src/how_works.scss
+++ b/assets/stylesheets/src/how_works.scss
@@ -9,12 +9,12 @@
     font-weight: bold;
     text-transform: uppercase;
     margin-top: 1em;
-    padding-top: 2em;
+    // padding-top: 2em;
   }
 
   p {
     font-size: 1.5em;
-    margin: 2em 0;
+    // margin: 2em 0;
   }
 }
 
