--- a/assets/stylesheets/src/land.scss
+++ b/assets/stylesheets/src/land.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   background-color: #190033;
+  background-image: url('../images/stage.jpg');
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
