--- a/assets/stylesheets/services.css
+++ b/assets/stylesheets/services.css
@@ -1,13 +1,13 @@
 #services {
   background-image: url("../images/umbrella.jpg");
   background-size: cover;
-  height: 40vh;
+  min-height: 60vmin;
   background-position: 0 0;
   color: #FFFFFF;
   position: relative; }
   #services .service_container {
     position: absolute;
-    bottom: 10em;
+    bottom: 15em;
     left: 3em;
     right: 3em; }
   #services .tag {
