--- a/assets/stylesheets/how_works.css
+++ b/assets/stylesheets/how_works.css
@@ -1,12 +1,21 @@
-#how_works .img-container, #faq .img-container {
-  padding: 0; }
-#how_works h3, #faq h3 {
-  font-size: 2em;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-top: 1em; }
-#how_works p, #faq p {
-  font-size: 1.5em; }
+#how_works, #faq {
+  min-height: 80vh;
+  padding-top: 2em; }
+  #how_works .img-container, #faq .img-container {
+    background-image: url("../images/headphones.jpg");
+    background-size: cover;
+    min-height: 80vmin;
+    padding: 0; }
+  #how_works h3, #faq h3 {
+    font-size: 2em;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-top: 1em;
+    padding-top: 1em;
+    padding-bottom: 1em; }
+  #how_works p, #faq p {
+    font-size: 1.5em;
+    padding-bottom: 1em; }
 
 #how_works_action {
   background-image: url("../images/windows.jpg");
